# ROBIT_bipedal_HW

./: README.md
day2/: FK.m  IK.m  IKcode.m
day3/: recpath.m
과제 백업/TransformMatrixEigen/: CMakeLists.txt  main.cpp
